<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:padding="16dp">

    <!-- Back Icon -->
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/backarrow"
        android:contentDescription="@string/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>

    <!-- Recipe Title -->
    <EditText
        android:id="@+id/etRecipeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Recipe Title"
        android:textColor="@color/black"
        android:padding="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/backIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextFields"/>

    <!-- Ingredients EditText -->
    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients_one_per_line"
        android:padding="12dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:minLines="5"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/etRecipeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Instructions EditText -->
    <EditText
        android:id="@+id/etInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/instructions"
        android:padding="12dp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:minLines="5"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/etIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Image Upload Button -->
    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:gravity="center"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/etInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ImageView for displaying uploaded image -->
    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@color/material_dynamic_neutral95"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        app:layout_constraintTop_toBottomOf="@+id/uploadImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Progress Bar for image upload -->
    <ProgressBar
        android:id="@+id/uploadProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Save Recipe Button -->
    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_recipe"
        android:gravity="center"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_200"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/uploadProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
